--- a/JehadMariTask2.html
+++ b/JehadMariTask2.html
@@ -2,7 +2,7 @@
 <head>
     <style>
         body {
-            background-image: url("images/background.png");
+            background-image: url("background.png");
             background-repeat: no-repeat;
             background-size: cover;
         }
@@ -102,7 +102,7 @@
             <li><a href="#ser">Services</a></li>
             <li><a href="#co">Contact Us</a></li>
         </ul>
-        <img src="images/logo.png" width="60" height="60" id="logo" />
+        <img src="logo.png" width="60" height="60" id="logo" />
     </header>
     <p align="center" class="tx">
         Send Flowers and gifts.
@@ -116,9 +116,9 @@
     <h1 id="pro" align="center" class="tx">Products</h1>
     <table align="center" id="pr">
         <tr>
-            <td><a href="#"><img src="images/1.png" width="350" height="350" /></a></td>
-            <td><a href="#"><img src="images/2.png" width="350" height="350" /></a></td>
-            <td><a href="#"><img src="images/3.png" width="350" height="350" /></a></td>
+            <td><a href="#"><img src="1.png" width="350" height="350" /></a></td>
+            <td><a href="#"><img src="2.png" width="350" height="350" /></a></td>
+            <td><a href="#"><img src="3.png" width="350" height="350" /></a></td>
         </tr>
         <tr class="txt">
             <td align="center"><button>Buy</button>&nbsp;&nbsp; 50 JOD</td>
@@ -126,9 +126,9 @@
             <td align="center"><button>Buy</button>&nbsp;&nbsp; 20 JOD</td>
         </tr>
         <tr>
-            <td><a href="#"><img src="images/4.png" width="350" height="350" /></a></td>
-            <td><a href="#"><img src="images/5.png" width="350" height="350" /></a></td>
-            <td><a href="#"><img src="images/6.png" width="350" height="350" /></a></td>
+            <td><a href="#"><img src="4.png" width="350" height="350" /></a></td>
+            <td><a href="#"><img src="5.png" width="350" height="350" /></a></td>
+            <td><a href="#"><img src="6.png" width="350" height="350" /></a></td>
         </tr>
         <tr class="txt">
             <td align="center"><button>Buy</button>&nbsp;&nbsp; 35 JOD</td>
@@ -136,9 +136,9 @@
             <td align="center"><button>Buy</button>&nbsp;&nbsp; 30 JOD</td>
         </tr>
         <tr>
-            <td><a href="#"><img src="images/7.png" width="350" height="350" /></a></td>
-            <td><a href="#"><img src="images/8.png" width="350" height="350" /></a></td>
-            <td><a href="#"><img src="images/9.png" width="350" height="350" /></a></td>
+            <td><a href="#"><img src="7.png" width="350" height="350" /></a></td>
+            <td><a href="#"><img src="8.png" width="350" height="350" /></a></td>
+            <td><a href="#"><img src="9.png" width="350" height="350" /></a></td>
         </tr>
         <tr class="txt">
             <td align="center"><button>Buy</button>&nbsp;&nbsp; 30 JOD</td>
